deployment/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: muarif.online
    http:
      paths:
      - pathType: Prefix
        path: /api/v1/users/
        backend:
          service:
            name: user-service
            port:
              number: 8000
      - pathType: Prefix
        path: /api/v1/payments/
        backend:
          service:
            name: payment-service
            port:
              number: 8003
      - pathType: Prefix
        path: /api/v1/contents/
        backend:
          service:
            name: content-service
            port:
              number: 8001
      - pathType: Prefix
        path: /api/v1/notification/
        backend:
          service:
            name: notification-service
            port:
              number: 8002
